@@ -4,7 +4,7 @@
 
 
 AC_PREREQ([2.63])
-AC_INIT([LanlGeoMag], [1.5.7], [mghenderson@lanl.gov])
+AC_INIT([LanlGeoMag], [1.5.7+], [mghenderson@lanl.gov])
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AC_LANG([C])
