@@ -1,0 +1,279 @@
+Examples/MultiCoord/Makefile
+Examples/MultiCoord/MultiCoord.c
+Examples/CRAP/results_1e-08.dat
+Examples/CRAP/results_6.6_1e-08.dat
+Examples/CRAP/results_1e-07.dat
+Examples/CRAP/results_6.6_1e-07.dat
+Examples/CRAP/results_6.6_1e-06.dat
+Examples/CRAP/DipoleTest_6.6/results_1e-08.dat
+Examples/CRAP/DipoleTest_6.6/results_1e-07.dat
+Examples/CRAP/DipoleTest_6.6/results_1e-01.dat
+Examples/CRAP/DipoleTest_6.6/results_1e-02.dat
+Examples/CRAP/DipoleTest_6.6/results_1e-03.dat
+Examples/CRAP/DipoleTest_6.6/plot.ps
+Examples/CRAP/DipoleTest_6.6/results_1e-05.dat
+Examples/CRAP/DipoleTest_6.6/results_1e-06.dat
+Examples/CRAP/DipoleTest_6.6/plot.save
+Examples/CRAP/DipoleTest_6.6/results_1e-04.dat
+Examples/CRAP/results_6.6_1e-04.dat
+Examples/CRAP/MagCoords.c
+Examples/CRAP/DynamicMemory.h
+Examples/CRAP/MagEphemInfo.h
+Examples/CRAP/results_1e-03.dat
+Examples/CRAP/plot.ps
+Examples/CRAP/results_6.6_1e-03.dat
+Examples/CRAP/Test.c
+Examples/CRAP/ComputeFieldQuantities.c
+Examples/CRAP/ComputeFieldQuantities2.c
+Examples/CRAP/Makefile
+Examples/CRAP/results_1e-05.dat
+Examples/CRAP/DipoleTest_3.0/results_1e-08.dat
+Examples/CRAP/DipoleTest_3.0/results_1e-07.dat
+Examples/CRAP/DipoleTest_3.0/results_1e-01.dat
+Examples/CRAP/DipoleTest_3.0/results_1e-02.dat
+Examples/CRAP/DipoleTest_3.0/results_1e-03.dat
+Examples/CRAP/DipoleTest_3.0/plot.ps
+Examples/CRAP/DipoleTest_3.0/results_1e-05.dat
+Examples/CRAP/DipoleTest_3.0/results_1e-06.dat
+Examples/CRAP/DipoleTest_3.0/plot.save
+Examples/CRAP/DipoleTest_3.0/results_1e-04.dat
+Examples/CRAP/DipoleTest_1.5/results_1e-08.dat
+Examples/CRAP/DipoleTest_1.5/results_1e-07.dat
+Examples/CRAP/DipoleTest_1.5/results_1e-01.dat
+Examples/CRAP/DipoleTest_1.5/results_1e-02.dat
+Examples/CRAP/DipoleTest_1.5/results_1e-03.dat
+Examples/CRAP/DipoleTest_1.5/plot.ps
+Examples/CRAP/DipoleTest_1.5/results_1e-05.dat
+Examples/CRAP/DipoleTest_1.5/results_1e-06.dat
+Examples/CRAP/DipoleTest_1.5/plot.save
+Examples/CRAP/DipoleTest_1.5/results_1e-04.dat
+Examples/CRAP/results_1e-06.dat
+Examples/CRAP/DipoleTest_1.05/results_1e-08.dat
+Examples/CRAP/DipoleTest_1.05/results_1e-07.dat
+Examples/CRAP/DipoleTest_1.05/results_1e-01.dat
+Examples/CRAP/DipoleTest_1.05/results_1e-02.dat
+Examples/CRAP/DipoleTest_1.05/results_1e-03.dat
+Examples/CRAP/DipoleTest_1.05/plot.ps
+Examples/CRAP/DipoleTest_1.05/results_1e-05.dat
+Examples/CRAP/DipoleTest_1.05/results_1e-06.dat
+Examples/CRAP/DipoleTest_1.05/plot.save
+Examples/CRAP/DipoleTest_1.05/results_1e-04.dat
+Examples/CRAP/plot.save
+Examples/CRAP/foo.c
+Examples/CRAP/results_6.6_1e-05.dat
+Examples/CRAP/results_1e-04.dat
+Examples/CRAP/DipoleTest_1.25/results_1e-08.dat
+Examples/CRAP/DipoleTest_1.25/results_1e-07.dat
+Examples/CRAP/DipoleTest_1.25/results_1e-01.dat
+Examples/CRAP/DipoleTest_1.25/results_1e-02.dat
+Examples/CRAP/DipoleTest_1.25/results_1e-03.dat
+Examples/CRAP/DipoleTest_1.25/plot.ps
+Examples/CRAP/DipoleTest_1.25/results_1e-05.dat
+Examples/CRAP/DipoleTest_1.25/results_1e-06.dat
+Examples/CRAP/DipoleTest_1.25/plot.save
+Examples/CRAP/DipoleTest_1.25/results_1e-04.dat
+Examples/TimeExample/Plot
+Examples/TimeExample/Time.dat
+Examples/TimeExample/Plot2
+Examples/TimeExample/TimeDiffs.svg
+Examples/TimeExample/Makefile
+Examples/TimeExample/DUT1_DAT.png
+Examples/TimeExample/TimeEx.c
+Examples/TimeExample/TimeDiffs.png
+Examples/TestValladoEx315/TestValladoEx315.c
+Examples/TestValladoEx315/Batch
+Examples/TestValladoEx315/Results.txt
+Examples/TestValladoEx315/Results_noeop.txt
+Examples/TestValladoEx315/Makefile
+Examples/TestValladoEx315/Results_noeop.pdf
+Examples/TestValladoEx315/Results.pdf
+Examples/LstarVersusPA_omp/ComputeLstarVersusPA.c
+Examples/LstarVersusPA_omp/plot.ps
+Examples/LstarVersusPA_omp/LstarVersusPA.c
+Examples/LstarVersusPA_omp/Makefile
+Examples/LstarVersusPA_omp/plot.save
+Examples/LstarVersusPA_omp/Lstar.dat
+Examples/TimeConversion/TimeConv2.ps
+Examples/TimeConversion/TimeConv.c
+Examples/TimeConversion/TestLeapSeconds.c
+Examples/TimeConversion/JulianDate.c
+Examples/TimeConversion/TimeConv2
+Examples/TimeConversion/Makefile
+Examples/TimeConversion/tmp.ps
+Examples/TimeConversion/tmp.txt
+Examples/TimeConversion/TimeConvOnLeapSecondDay.c
+Examples/TimeConversion/TimeConv
+Examples/TimeConversion/LeapSecondDateBoundary.c
+Examples/TimeConversion/TimeConv2.c
+Examples/EopExample/results.txt
+Examples/EopExample/QuickStartEop.c
+Examples/EopExample/Makefile
+Examples/CoordQuickStart/results.txt
+Examples/CoordQuickStart/Makefile
+Examples/CoordQuickStart/CoordQuickStart.c
+Examples/LstarDipoleTest/ComputeLstarVersusPA.c
+Examples/LstarDipoleTest/DipoleTest_6.6/results_1e-08.dat
+Examples/LstarDipoleTest/DipoleTest_6.6/results_1e-07.dat
+Examples/LstarDipoleTest/DipoleTest_6.6/results_1e-01.dat
+Examples/LstarDipoleTest/DipoleTest_6.6/results_1e-02.dat
+Examples/LstarDipoleTest/DipoleTest_6.6/results_1e-03.dat
+Examples/LstarDipoleTest/DipoleTest_6.6/plot.ps
+Examples/LstarDipoleTest/DipoleTest_6.6/results_1e-05.dat
+Examples/LstarDipoleTest/DipoleTest_6.6/results_1e-06.dat
+Examples/LstarDipoleTest/DipoleTest_6.6/plot.save
+Examples/LstarDipoleTest/DipoleTest_6.6/results_1e-04.dat
+Examples/LstarDipoleTest/DynamicMemory.h
+Examples/LstarDipoleTest/MagEphemInfo.h
+Examples/LstarDipoleTest/LstarVersusPA.c
+Examples/LstarDipoleTest/Test.c
+Examples/LstarDipoleTest/Makefile
+Examples/LstarDipoleTest/DipoleTest_3.0/results_1e-08.dat
+Examples/LstarDipoleTest/DipoleTest_3.0/results_1e-07.dat
+Examples/LstarDipoleTest/DipoleTest_3.0/results_1e-01.dat
+Examples/LstarDipoleTest/DipoleTest_3.0/results_1e-02.dat
+Examples/LstarDipoleTest/DipoleTest_3.0/results_1e-03.dat
+Examples/LstarDipoleTest/DipoleTest_3.0/plot.ps
+Examples/LstarDipoleTest/DipoleTest_3.0/results_1e-05.dat
+Examples/LstarDipoleTest/DipoleTest_3.0/results_1e-06.dat
+Examples/LstarDipoleTest/DipoleTest_3.0/plot.save
+Examples/LstarDipoleTest/DipoleTest_3.0/results_1e-04.dat
+Examples/LstarDipoleTest/DipoleTest_1.5/results_1e-08.dat
+Examples/LstarDipoleTest/DipoleTest_1.5/results_1e-07.dat
+Examples/LstarDipoleTest/DipoleTest_1.5/results_1e-01.dat
+Examples/LstarDipoleTest/DipoleTest_1.5/results_1e-02.dat
+Examples/LstarDipoleTest/DipoleTest_1.5/results_1e-03.dat
+Examples/LstarDipoleTest/DipoleTest_1.5/plot.ps
+Examples/LstarDipoleTest/DipoleTest_1.5/results_1e-05.dat
+Examples/LstarDipoleTest/DipoleTest_1.5/results_1e-06.dat
+Examples/LstarDipoleTest/DipoleTest_1.5/plot.save
+Examples/LstarDipoleTest/DipoleTest_1.5/results_1e-04.dat
+Examples/LstarDipoleTest/DipoleTest_1.05/results_1e-08.dat
+Examples/LstarDipoleTest/DipoleTest_1.05/results_1e-07.dat
+Examples/LstarDipoleTest/DipoleTest_1.05/results_1e-01.dat
+Examples/LstarDipoleTest/DipoleTest_1.05/results_1e-02.dat
+Examples/LstarDipoleTest/DipoleTest_1.05/results_1e-03.dat
+Examples/LstarDipoleTest/DipoleTest_1.05/plot.ps
+Examples/LstarDipoleTest/DipoleTest_1.05/results_1e-05.dat
+Examples/LstarDipoleTest/DipoleTest_1.05/results_1e-06.dat
+Examples/LstarDipoleTest/DipoleTest_1.05/plot.save
+Examples/LstarDipoleTest/DipoleTest_1.05/results_1e-04.dat
+Examples/LstarDipoleTest/DipoleTest_1.25/results_1e-08.dat
+Examples/LstarDipoleTest/DipoleTest_1.25/results_1e-07.dat
+Examples/LstarDipoleTest/DipoleTest_1.25/results_1e-01.dat
+Examples/LstarDipoleTest/DipoleTest_1.25/results_1e-02.dat
+Examples/LstarDipoleTest/DipoleTest_1.25/results_1e-03.dat
+Examples/LstarDipoleTest/DipoleTest_1.25/plot.ps
+Examples/LstarDipoleTest/DipoleTest_1.25/results_1e-05.dat
+Examples/LstarDipoleTest/DipoleTest_1.25/results_1e-06.dat
+Examples/LstarDipoleTest/DipoleTest_1.25/plot.save
+Examples/LstarDipoleTest/DipoleTest_1.25/results_1e-04.dat
+Examples/EopExample2/Geodetic.png
+Examples/EopExample2/EopParams.c
+Examples/EopExample2/EopParams.dat
+Examples/EopExample2/EopParams_1990_2010.svg
+Examples/EopExample2/Plot2
+Examples/EopExample2/image.svg
+Examples/EopExample2/Makefile
+Examples/EopExample2/EopParams_1990_2010.png
+Examples/SpiceTime/Time.dat
+Examples/SpiceTime/Makefile
+Examples/SpiceTime/SpiceTime.c
+Examples/MagEphem/ComputeLstarVersusPA.c
+Examples/MagEphem/plot.ps
+Examples/MagEphem/input.txt
+Examples/MagEphem/Test.c
+Examples/MagEphem/Makefile
+Examples/MagEphem/output.txt
+Examples/MagEphem/plot.save
+Examples/MagEphem/Lstar.dat
+Examples/MagEphem/tmp.c
+Examples/MagEphem/MagEphemFromTLE.c
+Examples/Lstar/Lstar.c
+Examples/Lstar/DynamicMemory.h
+Examples/Lstar/MagEphemInfo.h
+Examples/Lstar/ComputeFieldQuantities.c
+Examples/Lstar/Makefile
+Examples/LstarDipoleTest_omp/ComputeLstarVersusPA.c
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/results_1e-08.dat
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/results_1e-07.dat
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/results_1e-01.dat
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/results_1e-02.dat
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/results_1e-03.dat
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/plot.ps
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/results_1e-05.dat
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/results_1e-06.dat
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/plot.save
+Examples/LstarDipoleTest_omp/DipoleTest_6.6/results_1e-04.dat
+Examples/LstarDipoleTest_omp/DynamicMemory.h
+Examples/LstarDipoleTest_omp/MagEphemInfo.h
+Examples/LstarDipoleTest_omp/plot.ps
+Examples/LstarDipoleTest_omp/LstarVersusPA.c
+Examples/LstarDipoleTest_omp/Test.c
+Examples/LstarDipoleTest_omp/Makefile
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/results_1e-08.dat
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/results_1e-07.dat
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/results_1e-01.dat
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/results_1e-02.dat
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/results_1e-03.dat
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/plot.ps
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/results_1e-05.dat
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/results_1e-06.dat
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/plot.save
+Examples/LstarDipoleTest_omp/DipoleTest_3.0/results_1e-04.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/results_1e-08.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/results_1e-07.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/results_1e-01.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/results_1e-02.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/results_1e-03.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/plot.ps
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/results_1e-05.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/results_1e-06.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/plot.save
+Examples/LstarDipoleTest_omp/DipoleTest_1.5/results_1e-04.dat
+Examples/LstarDipoleTest_omp/puke.txt
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/results_1e-08.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/results_1e-07.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/results_1e-01.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/results_1e-02.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/results_1e-03.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/plot.ps
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/results_1e-05.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/results_1e-06.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/plot.save
+Examples/LstarDipoleTest_omp/DipoleTest_1.05/results_1e-04.dat
+Examples/LstarDipoleTest_omp/plot.save
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/results_1e-08.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/results_1e-07.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/results_1e-01.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/results_1e-02.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/results_1e-03.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/plot.ps
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/results_1e-05.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/results_1e-06.dat
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/plot.save
+Examples/LstarDipoleTest_omp/DipoleTest_1.25/results_1e-04.dat
+Examples/TLE/ssa_swx_tle_output.txt
+Examples/TLE/input.txt
+Examples/TLE/Makefile
+Examples/TLE/TLEs.txt
+Examples/TLE/output.txt
+Examples/TLE/TwoLineElements.c
+Examples/TLE/spec_interest.txt
+Examples/TLE/ssa_swx_tle_input.txt
+Examples/TLE/TwoLineElementsFromFile.c
+Examples/Sun/SUN.dat
+Examples/Sun/Plot
+Examples/Sun/jpl.dat
+Examples/Sun/data.txt
+Examples/Sun/image.eps
+Examples/Sun/Makefile
+Examples/Sun/foo.c
+Examples/Sun/image.ps
+Examples/Sun/puke.svg
+Examples/Sun/image.png
+Examples/FieldTracing/Makefile
+Examples/FieldTracing/SimpleTrace.c
+Examples/AE8_AP8/Makefile
+Examples/AE8_AP8/AE8_AP8.c
+Examples/Geodetic/Geodetic.c
+Examples/Geodetic/Makefile
