@@ -1,0 +1,11 @@
+EopData/GetEopFiles
+EopData/LgmEop.dat
+EopData/eopc04.62-now
+EopData/finals.daily
+EopData/finals2000A.all
+EopData/finals.all
+EopData/finals2000A.daily
+EopData/tai-utc.dat
+EopData/eopc04_IAU2000.62-now
+EopData/GetEopFiles.in
+EopData/Lgm_LeapSecondDates.dat
